@@ -86,6 +86,8 @@ Version 0.7.5 UNRELEASED
     compilers is not great.  When support is good, the switch should be almost
     automatic.
 
+  * Add generic/apt/config_file.{h,cc} to help manage config file
+
 - Documentation:
 
   * manpage:
